--- a/overlay.html
+++ b/overlay.html
@@ -1,17 +1,43 @@
-<div style="pointer-events: auto; position: relative; z-index: 0">
-  <div
-    style="position: fixed; top: 0px; left: 0px; width: 100vw; height: 100vh"
-  ></div>
-  <div
-    style="position: fixed; left: 130px; top: 203.398px; pointer-events: none"
-  >
-    <!-- box shadow -->
-    <div id="box">
-      <div id="no-wrap">
-        <div id="dot"></div>
-        <div style="display: block">Not started</div>
-      </div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      /* Tooltip container */
+      .tooltip {
+        position: relative;
+        display: inline-block;
+        border-bottom: 1px dotted black;
+      }
+
+      /* Tooltip text */
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        /* Position the tooltip text */
+        position: absolute;
+        z-index: 1;
+        bottom: 125%;
+        left: 50%;
+        margin-left: -60px;
+      }
+
+      /* Show the tooltip text when you mouse over the tooltip container */
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Tooltip Example</h1>
+    <p>Move the mouse over the text below to see the tooltip:</p>
+    <div class="tooltip">
+      Hover over me
+      <span class="tooltiptext">I am a tooltip</span>
     </div>
-    <!-- nn -->
-  </div>
-</div>
+  </body>
+</html>
