--- a/overlay.html
+++ b/overlay.html
@@ -3,41 +3,63 @@
   <head>
     <style>
       /* Tooltip container */
+      .no-wrap {
+        background: rgba(242, 241, 238, 0.6);
+        padding: 10px;
+        width: 100%;
+        min-height: 34px;
+        font-size: 14px;
+
+        display: flex;
+        align-items: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        cursor: pointer;
+        z-index: 1;
+      }
+
+      .no-wrap:hover {
+        background: darken(rgba(242, 241, 238, 0.6), 8%);
+        overflow: visible;
+      }
+      #dot {
+        margin-right: 5px;
+        border-radius: 99px;
+        height: 8px;
+        width: 8px;
+        background-color: rgb(145, 145, 142);
+      }
       .tooltip {
         position: relative;
-        display: inline-block;
-        border-bottom: 1px dotted black;
+        /* display: inline-block; */
       }
-
-      /* Tooltip text */
-      .tooltip .tooltiptext {
-        visibility: hidden;
-        width: 120px;
-        background-color: black;
-        color: #fff;
-        text-align: center;
+      .tooltiptext {
+        background-color: red;
+        border: 4px solid blue;
         border-radius: 6px;
-        padding: 5px 0;
-        /* Position the tooltip text */
+        padding: 10px;
+        visibility: hidden;
+        white-space: nowrap;
+        text-align: center;
         position: absolute;
-        z-index: 1;
-        bottom: 125%;
-        left: 50%;
-        margin-left: -60px;
+        z-index: 2;
+        top: 0px;
+        left: 0px;
       }
 
-      /* Show the tooltip text when you mouse over the tooltip container */
       .tooltip:hover .tooltiptext {
         visibility: visible;
       }
     </style>
   </head>
   <body>
-    <h1>Tooltip Example</h1>
-    <p>Move the mouse over the text below to see the tooltip:</p>
-    <div class="tooltip">
-      Hover over me
-      <span class="tooltiptext">I am a tooltip</span>
+    <div class="text no-wrap tooltip">
+      <div id="dot"></div>
+      <div>Michael Corleone confronts Sollozzo and McCluskey</div>
+      <span class="tooltiptext"
+        >Michael Corleone confronts Sollozzo and McCluskey</span
+      >
     </div>
   </body>
 </html>
