--- a/overlay.html
+++ b/overlay.html
@@ -1,65 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Auto Height Textarea</title>
     <style>
-      /* Tooltip container */
-      .no-wrap {
-        background: rgba(242, 241, 238, 0.6);
+      textarea {
+        /* display: table; */
+        width: 200px;
+        height: auto;
+        /* min-height: 50px; */
+        /* resize: none; */
         padding: 10px;
-        width: 100%;
-        min-height: 34px;
-        font-size: 14px;
-
-        display: flex;
-        align-items: center;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        cursor: pointer;
-        z-index: 1;
-      }
-
-      .no-wrap:hover {
-        background: darken(rgba(242, 241, 238, 0.6), 8%);
-        overflow: visible;
-      }
-      #dot {
-        margin-right: 5px;
-        border-radius: 99px;
-        height: 8px;
-        width: 8px;
-        background-color: rgb(145, 145, 142);
-      }
-      .tooltip {
-        position: relative;
-        /* display: inline-block; */
-      }
-      .tooltiptext {
-        background-color: red;
-        border: 4px solid blue;
-        border-radius: 6px;
-        padding: 10px;
-        visibility: hidden;
-        white-space: nowrap;
-        text-align: center;
-        position: absolute;
-        z-index: 2;
-        top: 0px;
-        left: 0px;
-      }
-
-      .tooltip:hover .tooltiptext {
-        visibility: visible;
+        box-sizing: border-box;
       }
     </style>
   </head>
   <body>
-    <div class="text no-wrap tooltip">
-      <div id="dot"></div>
-      <div>Michael Corleone confronts Sollozzo and McCluskey</div>
-      <span class="tooltiptext"
-        >Michael Corleone confronts Sollozzo and McCluskey</span
-      >
-    </div>
+    <textarea>Enter your text here...</textarea>
   </body>
 </html>
