--- a/overlay.html
+++ b/overlay.html
@@ -3,146 +3,85 @@
   <head>
     <title>Dynamic Button Table</title>
     <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box !important;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      th:hover,
-      td:hover {
-        background-color: #42d038;
-      }
-
-      .window {
-        width: 80vw;
-        margin: auto;
-      }
-
-      table {
-        box-sizing: border-box;
-        /* border-collapse: collapse; */
-        border-spacing: 0px;
-        margin: 20px 0px;
-        font-size: 1rem;
-        cursor: default;
-        width: 100%;
-        height: 100%;
-      }
-
-      th {
-        max-width: 150px;
-        min-width: 100px;
-        padding: 12px 15px;
-        text-align: left;
-        font-weight: bold;
-        border-bottom: 10px solid #000;
-        border-right: 10px solid #000;
-      }
-
-      td {
-        max-width: 150px;
-        min-width: 100px;
-        position: relative;
-        white-space: nowrap;
-        /* overflow: hidden; */
-        text-overflow: ellipsis;
-        padding: 15px;
-        padding-right: 0rem;
-        border-bottom: 10px solid #000;
-        border-right: 10px solid #000;
-      }
-
-      tr {
-        position: relative;
-        width: 100%;
-        height: 100%;
-      }
-
-      .btn-container {
-        position: absolute;
-        left: -10px;
-        top: -1px;
-        display: none;
-      }
-
-      .btn-container button {
+      .category {
         display: inline-block;
-        padding: 0.8rem 2rem;
-        transition: all 0.5s;
-        border: none;
-        cursor: pointer;
-        border-radius: 10px;
-        font-weight: 900;
+        border: 1px solid black;
+        padding: 10px;
+        margin: 10px;
+        width: 200px;
+      }
 
-        border-radius: 5px;
-        font-weight: 400;
-        padding: 0rem;
-        border: 2px solid #000;
+      .items {
+        display: flex;
+        list-style: none;
+        padding: 0;
+      }
+
+      .items li {
+        margin: 5px;
+        padding: 5px;
+        background-color: #eee;
+        cursor: move;
+      }
+
+      .category.dropzone {
+        border: 1px dashed black;
       }
     </style>
   </head>
   <body>
-    <div class="window">
-      <table>
-        <thead>
-          <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
-            <th>Column 3</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Item 1-1</td>
-            <td>Item 1-2</td>
-            <td>Item 1-3</td>
-          </tr>
+    <div id="category-1" class="category">
+      <h2>Category 1</h2>
+      <ul class="items">
+        <li draggable="true">Item 1</li>
+        <li draggable="true">Item 2</li>
+        <li draggable="true">Item 3</li>
+      </ul>
+    </div>
 
-          <tr>
-            <td>Item 2-1</td>
-            <td>Item 2-2</td>
-            <td>Item 2-3</td>
-          </tr>
-          <tr>
-            <td>Item 2-1</td>
-            <td>Item 2-2</td>
-            <td>Item 2-3</td>
-          </tr>
-          <tr>
-            <td>Item 2-1</td>
-            <td>Item 2-2</td>
-            <td>Item 2-3</td>
-          </tr>
-        </tbody>
-      </table>
+    <div id="category-2" class="category">
+      <h2>Category 2</h2>
+      <ul class="items">
+        <li draggable="true">Item 4</li>
+        <li draggable="true">Item 5</li>
+        <li draggable="true">Item 6</li>
+      </ul>
     </div>
 
     <script>
-      const tbody = document.querySelector("tbody");
-      const rows = tbody.querySelectorAll("tr");
+      const items = document.querySelectorAll(".items li");
+      const categories = document.querySelectorAll(".category");
 
-      rows.forEach((row) => {
-        let btn = null;
-        const btnContainer = document.createElement("div");
-        btnContainer.classList.add("btn-container");
+      let draggedItem = null;
 
-        row.addEventListener("mouseover", function () {
-          if (!btn) {
-            btn = document.createElement("button");
-            btn.innerText = "Button";
-            btnContainer.appendChild(btn);
-            row.appendChild(btnContainer);
+      items.forEach((item) => {
+        item.addEventListener("dragstart", (e) => {
+          draggedItem = e.target;
+        });
+      });
+
+      categories.forEach((category) => {
+        category.addEventListener("dragenter", (e) => {
+          if (e.target.classList.contains("category")) {
+            e.target.classList.add("dropzone");
           }
-          btnContainer.style.display = "block";
         });
 
-        row.addEventListener("mouseout", function () {
-          if (btn) {
-            btnContainer.style.display = "none";
-            btnContainer.removeChild(btn);
-            btn = null;
+        category.addEventListener("dragover", (e) => {
+          e.preventDefault();
+        });
+
+        category.addEventListener("dragleave", (e) => {
+          if (e.target.classList.contains("category")) {
+            e.target.classList.remove("dropzone");
+          }
+        });
+
+        category.addEventListener("drop", (e) => {
+          e.preventDefault();
+          if (e.target.classList.contains("category")) {
+            e.target.querySelector(".items").appendChild(draggedItem);
+            e.target.classList.remove("dropzone");
           }
         });
       });
